<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/shape_dlg_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/update_name"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rename"
        android:gravity="center"
        android:hint="@string/ps_input_name"
        android:padding="5dp"
        android:textColorHint="@color/top_gray_deep"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:stateListAnimator="@null"
            android:text="@string/cancel"
            android:textSize="15dp" />

        <Button
            android:id="@+id/ok"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/white"
            android:stateListAnimator="@null"
            android:text="@string/diglog_ok"
            android:textSize="15dp" />
    </LinearLayout>
</LinearLayout>