<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_bg_top"
        style="@style/rl_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ctrl_liangba" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_bg_top"
        android:background="@color/top_gray" />

    <com.yaokantv.yaokanui.widget.CustScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_bg_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/stop"
                        style="@style/text_circle_62"
                        android:text="@string/stop" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/low"
                        style="@style/text_circle_62"
                        android:text="@string/low" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mid"
                        style="@style/text_circle_62"
                        android:text="@string/mid" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/high"
                        style="@style/text_circle_62"
                        android:text="@string/key_high" />
                </LinearLayout>
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/shape_timing">

                <ImageButton
                    android:id="@+id/time_up"
                    style="@style/x_btn"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/btn_temp_up" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/timing"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <ImageButton
                    android:id="@+id/time_down"
                    style="@style/x_btn"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/btn_temp_down" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp">

                <ImageButton
                    android:id="@+id/light"
                    style="@style/btn_power"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/btn_l_light" />

                <ImageButton
                    android:id="@+id/power"
                    style="@style/btn_power"
                    android:layout_centerInParent="true"
                    android:src="@drawable/bg_test" />

                <ImageButton
                    android:id="@+id/fan"
                    style="@style/btn_power"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/btn_fan" />
            </RelativeLayout>

            <com.yaokantv.yaokanui.widget.NoScrollGridView
                android:id="@+id/gv"
                style="@style/extra_grid"
                android:layout_marginTop="40dp" />
        </LinearLayout>

    </com.yaokantv.yaokanui.widget.CustScrollView>
</RelativeLayout>