<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_bg_top"
        style="@style/rl_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ctrl_camera" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_bg_top"
        android:background="@color/top_gray" />

    <com.yaokantv.yaokanui.widget.CustScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_bg_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/single"
                    style="@style/num_text"
                    android:layout_width="85dp"
                    android:layout_height="45dp"
                    android:enabled="true"
                    android:text="@string/camera_single"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/delay"
                    style="@style/num_text"
                    android:layout_width="85dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:enabled="true"
                    android:text="@string/camera_delay"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/series"
                    style="@style/num_text"
                    android:layout_width="85dp"
                    android:layout_height="45dp"
                    android:enabled="true"
                    android:text="@string/camera_series"
                    android:textSize="15dp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/power"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/btn_camera" />

            <TextView
                android:id="@+id/long_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/camera_long_prompt"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/ll_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/time_down"
                    style="@style/xxx_btn"
                    android:src="@drawable/btn_time_down" />

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/shape_cir_white_15"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:text="10"
                        android:textColor="@color/provider_bg"
                        android:textSize="40dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/tv_time"
                        android:layout_toEndOf="@+id/tv_time"
                        android:gravity="center"
                        android:text="s"
                        android:textColor="@color/provider_bg"
                        android:textSize="30dp" />
                </RelativeLayout>

                <ImageButton
                    android:id="@+id/time_up"
                    style="@style/xxx_btn"
                    android:src="@drawable/btn_time_up" />
            </LinearLayout>
        </LinearLayout>
    </com.yaokantv.yaokanui.widget.CustScrollView>
</RelativeLayout>