<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_bg_top"
        style="@style/rl_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ctrl_liangba" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_bg_top"
        android:background="@color/top_gray" />

    <com.yaokantv.yaokanui.widget.CustScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_bg_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/stop"
                        style="@style/text_circle_62"
                        android:text="@string/stop" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/low"
                        style="@style/text_circle_62"
                        android:text="@string/low" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mid"
                        style="@style/text_circle_62"
                        android:text="@string/mid" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/high"
                        style="@style/text_circle_62"
                        android:text="@string/key_high" />
                </LinearLayout>
            </LinearLayout>
            <ImageButton
                android:id="@+id/light"
                style="@style/btn_power"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:src="@drawable/btn_l_light" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/h1"
                        style="@style/text_circle_62"
                        android:text="1H" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/h2"
                        style="@style/text_circle_62"
                        android:text="2H" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/h4"
                        style="@style/text_circle_62"
                        android:text="4H" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/h8"
                        style="@style/text_circle_62"
                        android:text="8H" />
                </LinearLayout>
            </LinearLayout>


            <com.yaokantv.yaokanui.widget.NoScrollGridView
                android:id="@+id/gv"
                style="@style/extra_grid"
                android:layout_marginTop="40dp" />
        </LinearLayout>

    </com.yaokantv.yaokanui.widget.CustScrollView>
</RelativeLayout>